# EasyGLTF

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/easygltf/: easygltf.h
source/: CMakeLists.txt
source/easygltf/: CMakeLists.txt  easygltf.cpp
source/testprogram/: CMakeLists.txt  testprogram.cpp
